beryllium (1.3.5) debian;

  * Motion detection is off by default

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 21 Apr 2016 11:32:00 +0800

beryllium (1.3.4) debian;

  * Fix video editor gstreamer 1.0 build
  * Fix DV enumeration in gstreamer 1.0 build
  * Add bindings for udisks2

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 10 Dec 2015 13:36:00 +0800

beryllium (1.3.3) debian;

  * Check for files already sent to a DICOM server

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 10 Dec 2015 13:36:00 +0800

beryllium (1.3.2) debian;

  * Fix USB plug detect

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 3 Dec 2015 12:00:00 +0800

beryllium (1.3.1) debian;

  * Record clips/images from all sources by default
  * Validate clips/images template

 -- Pavel Bludov <pbludov@gmail.com>  Wed, 18 Nov 2015 12:40:00 +0800

beryllium (1.3.0) debian;

  * RTMP streaming support

 -- Pavel Bludov <pbludov@gmail.com>  Mon, 05 Oct 2015 15:23:00 +0800

beryllium (1.2.7) debian;

  * workaround for compiz bug
  * https://bugs.launchpad.net/ubuntu/+source/openjdk-7/+bug/1110138

 -- Pavel Bludov <pbludov@gmail.com>  Mon, 27 Jul 2015 15:05:00 +0800

beryllium (1.2.6) debian;

  * fix clip remove on click
  * Mono style icons

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 15 Apr 2015 12:41:00 +0800

beryllium (1.2.5) debian;

  * fix clip record countdown timer issue with qt 5.4

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 23 Jan 2015 13:34:00 +0800

beryllium (1.2.4) debian;

  * d-bus: fix d-bus service connection

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 19 Jan 2015 17:39:00 +0800

beryllium (1.2.3) debian;

  * d-bus: record clip/take snapshot: pull src parameter up.

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 19 Jan 2015 11:11:00 +0800

beryllium (1.2.2) debian;

  * d-bus: record clips/take snapshots for each src; select active src.

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 15 Jan 2015 15:33:00 +0800

beryllium (1.2.1) debian;

  * Bug fix release.
