@@ -1,3 +1,9 @@
+beryllium (1.3.6) debian;
+
+  * Allow subfolders in the image/clip/videolog file names.
+
+ -- Pavel Bludov <pbludov@gmail.com>  Fri, 19 Aug 2016 16:06:00 +0800
+
 beryllium (1.3.5) debian;
 
   * Motion detection is off by default
